Fixed video sizing on mobile when in portfolio modules

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -330,6 +330,22 @@ header.masthead h2 {
   font-size: 2rem;
 }
 
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
 @media (min-width: 768px) {
   .portfolio-modal .portfolio-modal-dialog {
     min-height: 100vh;
